--- a/Batch Processing.ipynb
+++ b/Batch Processing.ipynb
@@ -618,9 +618,6 @@
     "            return int(part)\n",
     "    return 0  # Return 0 if month number is not found\n",
     "\n",
-    "# List to keep track of imported datasets\n",
-    "imported_datasets = []\n",
-    "\n",
     "# Load the existing dataset names from the CSV file\n",
     "existing_datasets = set()\n",
     "try:\n",
@@ -707,10 +704,8 @@
     "            dataset_df.show()  # Show the contents of the dataset\n",
     "            \n",
     "            # Copy the dataset to the 'processed' folder\n",
-    "            copy_to_processed(dataset_to_import, dataset_df)\n",
+    "            export_to_processed(dataset_to_import, dataset_df)\n",
     "            \n",
-    "            # TODO: Import the dataset (use dataset_to_import)\n",
-    "            # Replace the following print statement with your dataset import logic\n",
     "            print(f\"Imported dataset: {dataset_to_import}\")\n",
     "    else:\n",
     "        print(\"No more datasets to import.\")\n",
@@ -732,14 +727,14 @@
     "    except Exception as e:\n",
     "        print(\"Error saving to CSV:\", str(e))\n",
     "\n",
-    "def copy_to_processed(dataset_name, dataset_df):\n",
+    "def export_to_processed(dataset_name, dataset_df):\n",
     "    destination_path = processed_folder_path + dataset_name\n",
     "    try:\n",
     "        # Write the dataset_df to the 'processed' folder\n",
     "        dataset_df.write.option(\"header\", True).mode(\"overwrite\").csv(destination_path)\n",
-    "        print(f\"Dataset {dataset_name} copied to 'processed' folder.\")\n",
+    "        print(f\"Dataset {dataset_name} exporteded to 'processed' folder.\")\n",
     "    except Exception as e:\n",
-    "        print(f\"Failed to copy dataset {dataset_name} to 'processed' folder. Error: {str(e)}\")\n",
+    "        print(f\"Failed to export dataset {dataset_name} to 'processed' folder. Error: {str(e)}\")\n",
     "    \n",
     "import_new_dataset()\n",
     "import_new_dataset()\n"
